tests/purs/failing/PASTrumpsKDNU7.purs
-- @shouldFailWith PartiallyAppliedSynonym
module Main where

import Prelude

class C (a :: (~>) Array)
