tests/purs/failing/PASTrumpsKDNU7.out
Error found:
in module [33mMain[0m
at tests/purs/failing/PASTrumpsKDNU7.purs:6:15 - 6:25 (line 6, column 15 - line 6, column 25)

  Type synonym [33mData.NaturalTransformation.NaturalTransformation[0m is partially applied.
  Type synonyms must be applied to all of their type arguments.

while checking that type [33mNaturalTransformation Array[0m
  has kind [33mType[0m
in type constructor [33mC$Dict[0m

See https://github.com/purescript/documentation/blob/master/errors/PartiallyAppliedSynonym.md for more information,
or to contribute content related to this error.

